# human-readable-python

./: .gitignore  README.md  pyproject.toml
.github/workflow/: publish-to-pypi.yml
.github/workflows/: publish-to-pypi.yml
examples/: example.py  requirements.txt
hrai_python/: __init__.py  hrai_logger.py
hrai_python/tests/: tests.py
tests/: test_decorator.py
